--- a/product-details.html
+++ b/product-details.html
@@ -29,7 +29,7 @@
             </div>
             <div class="cart-icon">
                 <a href="cart.html" style="text-decoration: none; color: inherit;">
-                    <span>Cart (0)</span>
+                    <span><i class="fas fa-shopping-cart"></i> Cart</span>
                 </a>
             </div>
         </nav>
@@ -116,7 +116,7 @@
                 // Get cart items from localStorage
                 const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
                 const totalItems = cartItems.reduce((total, item) => total + item.quantity, 0);
-                cartCountElement.textContent = `Cart (${totalItems})`;
+                cartCountElement.innerHTML = `<i class="fas fa-shopping-cart"></i> Cart (${totalItems})`;
             }
         });
     </script>
