--- a/admin-login.html
+++ b/admin-login.html
@@ -26,7 +26,7 @@
             </div>
             <div class="cart-icon">
                 <a href="../cart.html" style="text-decoration: none; color: inherit;">
-                    <span>Cart (0)</span>
+                    <span><i class="fas fa-shopping-cart"></i> Cart</span>
                 </a>
             </div>
         </nav>
