--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="categories.html"><i class="fas fa-list"></i> Categories</a></li>
                 <li><a href="deals.html"><i class="fas fa-tag"></i> Deals</a></li>
                 <li><a href="contact.html"><i class="fas fa-phone"></i> Contact</a></li>
+                <li><a href="account.html"><i class="fas fa-user"></i> Account</a></li>
             </ul>
             <div class="search-bar">
                 <input type="text" id="search-input" placeholder="Search products...">
@@ -30,7 +31,7 @@
             </div>
             <div class="cart-icon">
                 <a href="cart.html" style="text-decoration: none; color: inherit;">
-                    <span>Cart (0)</span>
+                    <span><i class="fas fa-shopping-cart"></i> Cart</span>
                 </a>
             </div>
         </nav>
@@ -111,7 +112,7 @@
                 // Get cart items from localStorage
                 const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
                 const totalItems = cartItems.reduce((total, item) => total + item.quantity, 0);
-                cartCountElement.textContent = `Cart (${totalItems})`;
+                cartCountElement.innerHTML = `<i class="fas fa-shopping-cart"></i> Cart (${totalItems})`;
             }
         });
     </script>
